# Naiscorp-Facility-Manager

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup_database.sql
cmake/: FindQt.cmake  Translations.cmake
forms/: Dashboard.qml  Login.qml  Main.qml  Signup.qml
include/: AuthController.h  DatabaseManager.h
scripts/: deploy.sh
src/: AuthController.cpp  DatabaseManager.cpp  main.cpp  main.qml  qml.qrc
toolchain/: raspberry-pi-aarch64.cmake
