<?xml version="1.0"?>
<package format="2">
  <name>naiscorp_facility_manager</name>
  <version>1.0.0</version>
  <description>Naiscorp Facility Manager Application</description>

  <maintainer email="developer@naiscorp.com">Naiscorp Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>qt5</depend>
  <depend>qt5-qml</depend>
  <depend>qt5-quick</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
